--- a/index.css
+++ b/index.css
@@ -314,6 +314,18 @@ span.bi:hover{
 
 
 @media (max-width: 800px) {
+  div.card{
+    width:30%; 
+    height:40vh;
+    margin-left:0;
+    display:inline-block;
+    border-radius: 10px;
+   }
+  div.works{
+    background-color:black;
+    height:100vh;
+    width:100%;
+   }
   ul {
     flex-direction: column;
   }
@@ -328,6 +340,7 @@ span.bi:hover{
   }
   div.container-fluid, div.about, div.works {
     height: auto;
+    width:100%;
   }
   div.picture, div.detail {
     width: 100%;
